objects/ASI_MFM_AP_AC_Code_Map__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>ASI MFM AP AC Code Map</relationshipLabel>
        <relationshipName>ASI_MFM_AP_AC_Code_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>ASI MFM AP AC Code Map</relationshipLabel>
        <relationshipName>ASI_MFM_AP_AC_Code_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Representative_AP_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Representative AP Code</label>
        <type>Checkbox</type>
    </fields>
    <label>ASI MFM AP AC Code Map</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>AP AC Code Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM AP AC Code Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>